# wavefunction-now

./: .gitignore  README.md  pyproject.toml
docs/: present_centered_program.md  validation_scope.md
examples/: detector_psf_convolution.py  ehrenfest.py  uncertainty_gaussian.py
notebooks/: README.md  decoherence_cat_state.ipynb  density_matrix_decoherence.ipynb  double_slit_histogram.ipynb  free_wavepacket.ipynb  grid_resolution_sweep.ipynb  harmonic_oscillator_histogram.ipynb  noisy_detector_histogram.ipynb  stern_gerlach_correlations.ipynb
src/: __init__.py  lindblad.py  measurement.py  solver.py
src/wavefunction_now/: __init__.py  measurement.py
tests/: test_energy_conservation.py  test_lindblad.py  test_measurement.py  test_solver.py  test_unitarity_and_convergence.py
wavefunction_now.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
